css «shop.html»

--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body  class="inner-page">
+<body class="inner-page">
 <header class="main-header">
   <div class="layout-center clearfix">
     <nav class="navigation">
@@ -42,19 +42,28 @@
       <form>
         <h2>ПРОИЗВОДИТЕЛИ:</h2>
         <ul>
-          <li><label><input type="checkbox" name="baxter-of-california">Baxter of California</label></li>
-          <li><label><input type="checkbox" name="mr-natty">Mr Natty</label></li>
-          <li><label><input type="checkbox" name="Suavecito">Suavecito</label></li>
-          <li><label><input type="checkbox" name="malin+goetz">Malin+Goetz</label></li>
-          <li><label><input type="checkbox" name="murrays">Murray’s</label></li>
-          <li><label><input type="checkbox" name="american-crew">American Crew</label></li>
+          <li><label><input type="checkbox" name="baxter-of-california">
+            <span class="custom-checkbox"></span>Baxter of California</label></li>
+          <li><label><input type="checkbox" name="mr-natty">
+            <span class="custom-checkbox"></span>Mr Natty</label></li>
+          <li><label><input type="checkbox" name="Suavecito">
+            <span class="custom-checkbox"></span>Suavecito</label></li>
+          <li><label><input type="checkbox" name="malin+goetz">
+            <span class="custom-checkbox"></span>Malin+Goetz</label></li>
+          <li><label><input type="checkbox" name="murrays">
+            <span class="custom-checkbox"></span>Murray’s</label></li>
+          <li><label><input type="checkbox" name="american-crew">
+            <span class="custom-checkbox"></span>American Crew</label></li>
         </ul>
 
         <h2>ГРУППЫ ТОВАРОВ:</h2>
         <ul>
-          <li><label><input type="radio" name="razor-accessories">Бритвенные принадлежности</label></li>
-          <li><label><input type="radio" name="care-products">Средства для ухода</label></li>
-          <li><label><input type="radio" name="accessories">Аксессуары</label></li>
+          <li><label><input type="radio" name="group" value="razor-accessories">
+            <span class="custom-radio"></span>Бритвенные принадлежности</label></li>
+          <li><label><input type="radio" name="group" value="care-products">
+            <span class="custom-radio"></span>Средства для ухода</label></li>
+          <li><label><input type="radio" name="group" value="accessories">
+            <span class="custom-radio"></span>Аксессуары</label></li>
         </ul>
 
         <button class="btn" type="button">Показать</button>
