--- a/item.html
+++ b/item.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Товар</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="inner-page">
 <header class="main-header">
-  <div class="layout-center">
-    <nav>
+  <div class="layout-center clearfix">
+    <nav class="navigation">
       <a class="logo" href="index.html"><img src="img/logo.png" alt="Барбершоп"></a>
       <ul>
         <li><a href="#">ИНФОРМАЦИЯ</a></li>
@@ -18,39 +21,47 @@
         <li><a href="#">КОНТАКТЫ</a></li>
       </ul>
     </nav>
-    <a class="btn btn-login" href="#">ВХОД</a>
+    <div class="user-block">
+      <a class="login" href="#">ВХОД</a>
+    </div>
   </div>
 </header>
 
-<main>
-  <div class="layout-center">
-    <h1>набор для путешествий «Baxter of California»</h1>
-    <ul class="breadcrumbs">
-      <li><a href="index.html">ГЛАВНАЯ</a></li>
-      <li><a href="shop.html">МАГАЗИН</a></li>
-      <li><a href="shop.html">СРЕДСТВА ДЛЯ УХОДА</a></li>
-      <li><a href="#">набор для путешествий «Baxter of California»</a></li>
-    </ul>
-    <div class="photos">
-      <img class="main-photo" src="img/item1-img3.jpg" alt="Набор для путешествий">
+<main class="main-item">
+  <div class="layout-center clearfix">
+
+    <div class="inner-page-header clearfix">
+      <h1>набор для путешествий «Baxter of California»</h1>
+      <ul class="breadcrumbs">
+        <li><a href="index.html">ГЛАВНАЯ</a></li>
+        <li><a href="shop.html">МАГАЗИН</a></li>
+        <li><a href="shop.html">СРЕДСТВА ДЛЯ УХОДА</a></li>
+        <li><a class="current">набор для путешествий «Baxter of California»</a></li>
+      </ul>
+    </div>
+
+    <div class="photos clearfix">
+      <img class="main-photo" src="img/item1-img.jpg" alt="Набор для путешествий">
       <div class="other-photos">
         <img src="img/item1-img1.jpg" alt="Набор для путешествий">
         <img src="img/item1-img2.jpg" alt="Набор для путешествий">
         <img class="active" src="img/item1-img3.jpg" alt="Набор для путешествий">
       </div>
     </div>
-    <div class="description">
+
+    <div class="description clearfix">
       <span>ЕСТЬ В НАЛИЧИИ</span>
-      <span class="article-id">ЕСТЬ В НАЛИЧИИ</span>
-      <p class="description">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке
+      <span class="article-id">Артикул: dexter-ae</span>
+      <p class="text">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке
         находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания,
         увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
       <div class="buy">
         <div class="price">2900 РУБ.</div>
         <a class="btn" href="#">КУПИТЬ</a>
       </div>
+
       <b>В НАБОР ВХОДЯТ:</b>
-      <ul class="composition">
+      <ul>
         <li>Средство для умывания (50 мл)</li>
         <li>Увлажняющий крем (50 мл)</li>
         <li>Крем для бритья (50 мл)</li>
@@ -61,22 +72,22 @@
   </div>
 </main>
 
-<footer class="main-footer">
-  <div class="layout-center">
+<footer class="main-footer inner-page-footer">
+  <div class="layout-center clearfix">
     <section class="contacts">
-      <h4>БАРБЕРШОП «БОРОДИНСКИЙ»</h4>
-      <p>АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
-        КАК НАС НАЙТИ?<br>
+      <p>БАРБЕРШОП «БОРОДИНСКИЙ»<br>
+        АДРЕС: Г. САНКТ-ПЕТЕРБУРГ, УЛ. Б. КОНЮШЕННАЯ, Д. 19/8<br>
+        <a href="#">КАК НАС НАЙТИ?</a><br>
         ТЕЛЕФОН: +7 (495) 666-02-66</p>
     </section>
     <section class="social">
-      <h4>ДАВАЙТЕ ДРУЖИТЬ!</h4>
-      <a class="btn btn-social vk" href="#">ВКОНТАКТЕ</a>
-      <a class="btn btn-social fb" href="#">ФЕЙСБУК</a>
-      <a class="btn btn-social in" href="#">ИНСТАГРАМ</a>
+      <p>ДАВАЙТЕ ДРУЖИТЬ!</p>
+      <a class="btn-social vk" href="#">ВКОНТАКТЕ</a>
+      <a class="btn-social fb" href="#">ФЕЙСБУК</a>
+      <a class="btn-social in" href="#">ИНСТАГРАМ</a>
     </section>
     <section class="copyright">
-      <h4>РАЗРАБОТАНО:</h4>
+      <p>РАЗРАБОТАНО:</p>
       <a class="btn" href="#">HTMLACADEMY.RU</a>
     </section>
   </div>
