create js (popupLogin & popupMap)

--- a/index.html
+++ b/index.html
@@ -139,5 +139,9 @@
 
 <div class="modal-overlay"></div>
 
+<script src="js/popup.js"></script>
+<script src="js/map.js"></script>
+<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af8b4054ea55eee56a251a9e2da34c16a203e59bba8b753ea06bd6f7df16590bf&amp;width=766&amp;id=yandex-map&amp;height=561&amp;lang=ru_RU&amp;scroll=false"></script>
+
 </body>
 </html>
